refactor of some enpoints
