# src/dto/post/post.dto.ts
@@ -3,18 +3,32 @@ export class PostDTO {
   userUuid: string | null;
   title: string | null;
   text: string | null;
-  image: string | null;
-  createdAt: Date | null;
+  location: {
+    latitude: number | null;
+    longitude: number | null;
+    mapsUrl: string | null;
+  } | null;
+  multimediaUrl: string | null;
+  commentsCount: number | null;
+  likesCount: number | null;
+  creationDate: Date | null;
   updatedAt: Date | null;
 
   constructor(data: any) {
-    this.postUuid = data.postUuid;
-    this.userUuid = data.userUuid;
-    this.title = data.title;
-    this.text = data.text;
-    this.image = data.image;
-    this.createdAt = data.createdAt;
-    this.updatedAt = data.updatedAt;
+    this.postUuid = data.postUuid || null;
+    this.userUuid = data.userUuid || null;
+    this.title = data.title || null;
+    this.text = data.text || null;
+    this.location = {
+      latitude: data.latitude || null,
+      longitude: data.longitude || null,
+      mapsUrl: data.mapsUrl || null,
+    };
+    this.multimediaUrl = data.multimediaUrl || null;
+    this.commentsCount = data.commentCount || null;
+    this.likesCount = data.likesCount || null;
+    this.creationDate = data.createdAt ? new Date(data.createdAt) : null;
+    this.updatedAt = data.updated_at ? new Date(data.updated_at) : null;
   }
 
   public build(): PostDTO {
